editted help html page

--- a/html/help.html
+++ b/html/help.html
@@ -11,15 +11,15 @@ th, td {
 }
 </style>
 </head>
-<body>
+<bodybg color = "YELLOW">
 
-<h2>SLogo Documentation</h2>
+<h1><center>SLogo Documentation</center></h1>
 
-<p>not case sensitive</p>
+<p>*All the commands are not case sensitive</p>
 
 
 <!-- Write your comments here -->
-<h2>Basic Syntax</h2>
+<center><h2>Basic Syntax</h2>
 <table>
 <tr>
     <th>Token</th>
@@ -51,7 +51,7 @@ th, td {
     <td>Comment</td>
     <td>Ignore any lines that are empty, i.e., only zero or more spaces, and lines that begin with the comment character, "#".</td>
 </tr>
-</table>
+</table> 
 
 
 <!-- Write your comments here -->
@@ -459,8 +459,8 @@ th, td {
     note, after commands are run,  currently active list of turtles returns to that set by the last TELL command (or default active turtle if TELL never given)<br>
     note, if more than one turtle is active, commands run return value associated with the last active turtle </td>
   </tr>
-</table>
+</table></center>
 
-
+<p> Compiled by Slogo Team-17, Fall 2015 </p>
 </body>
 </html>
